# phox

./: .gitignore  .travis-ci.sh  .travis.yml  CHANGES  GHANGES  HISTORY.txt  INSTALL.txt  KNOWNBUGS.txt  Makefile  README.txt  TODO-pbrpm.txt  TODO.txt  config  config.distrib  config.dos  config.save  dune-project  opam  phox.opam  version
doc/: Makefile  afterbasic.tex  basic.phx  biblio.bib  biblio.tex  cmd.tex  cmd_proof.tex  cmd_top.tex  conventions.txt  doc.tex  ecran.eps  ecran.fig  ecran.pdf_t  examples.phx  examples.tex  flag.tex  inductive.tex  install.tex  interface.tex  intro.tex  libdoc.tex  libmdoc.tex  memento-slides.tex  memento.tex  module.tex  mypage.sty  natural.tex  parser.tex  phox.sty  phox_report.sty  preambule.tex  proof.tex  tex.tex  tutorial.tex  unicode.sty
emacs/: Makefile  README  phox-mode.el  phox.el
examples/: Makefile  ackerman.phx  add_pred.phx  cnp.phx  com_field.phx  com_group.phx  com_monoid.phx  com_ring.phx  compact.phx  complete.phx  euclide.phx  fibonacci.phx  field.phx  group.phx  higman.phx  icomplete.phx  list_bool.phx  mi.zf.phx  monoid.phx  (+12 more)
src/: Makefile  _tags  af2_basic.ml  af2_basic.mli  af2_logic.ml  affichage.ml  affichage.mli  basic.ml  basic.mli  bindlib.ml  bindlib.mli  cache.ml  cache.mli  compile.ml  compile.mli  data.ml  data.mli  data_base.ml  data_base.mli  data_info.ml  data_info.mli  dune  eval.ml  eval.mli  files.ml  files.mli  flags.ml  flags.mli  hilbert.ml  hilbert.mli  inductive.ml  inductive.mli  interact.ml  interact.mli  lambda_exp.ml  lambda_exp.mli  lambda_util.ml  lambda_util.mli  lang.ml  lex.ml  (+72 more)
(+102 files in other folders)
