synopsis: "PhoX proof assistant for higher-order logic."
description:
"""
PhoX is an implementation of higher-order logic which offer
extensible tactics.
"""
opam-version: "2.0"
maintainer:   "Christophe Raffalli <christophe@raffalli.eu>"
authors: [
  "Christophe Raffalli <christophe.raffalli@univ-savoie.fr>"
]

depends: [
  "ocaml"        {         >= "4.02.0" }
  "dune"         { build & >= "1.3.0"  }
  "opam"         { >= "1.0.0" }
  "pacomb"
  "num"
]

bug-reports:  "https://github.com/craff/phox/issues"
homepage: "https://raffalli.eu/~christophe/phox.html"
license: "LGPL-3.0"
dev-repo: "https://github.com/craff/phox.git"

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
